# qubeX

./: .gitignore  README.md  install_maya.bat  install_maya.sh  pyproject.toml
scripts/: create_shelf.py  generate_qubex_icons.py  install_maya.py  launch_toolkit.py
src/model_pipeline/: __init__.py  bootstrap.py  version.py
src/model_pipeline/io/: __init__.py  ui_banner.py
src/model_pipeline/ui/: __init__.py  model_toolkit_ui.py  rename_tool_ui.py
src/model_pipeline/utils/: __init__.py  cleanup_utils.py  hierarchy_utils.py  test.py
