[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubex-model-toolkit"
version = "1.0.0"
description = "A lightweight model utility toolkit for Maya"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QubeX Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["maya", "3d", "modeling", "pipeline", "toolkit"]
requires-python = ">=2.7"

[project.urls]
Homepage = "https://github.com/qubex/qubex-model-toolkit"
Repository = "https://github.com/qubex/qubex-model-toolkit.git"
Issues = "https://github.com/qubex/qubex-model-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.md", "*.txt"]
